dev-aermod-vis: only initialise pollutants with non null values in virtual sensors and simplified UpdateVirtualSensors